--- a/configs/config.yml
+++ b/configs/config.yml
@@ -11,11 +11,11 @@ train:
   num_workers: 8
   batch_size: 16
   clip_grad_norm: 3
-  epochs: 100
+  epochs: 500
   optimizer:
     lr: 0.0005 # 0.0003 
     weight_decay: 0.0001 # leave default
-  # from_checkpoint: checkpoints/model_26_0.7433850436343121.pth
+  from_checkpoint: checkpoints/model_53_0.8603010370630839.pth
 
 wandb:
   project: Vietnamsese Speech Recognition
